--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!/src/main//target/!/src/test/
+!/src/main//target/
+!/src/test//target/
 
 STS
 .apt_generated
@@ -23,7 +24,10 @@ NetBeans
 /nbbuild/
 /dist/
 /nbdist/
-/.nb-gradle/build//build/
+/.nb-gradle/
+build/
+!/src/main//build/
+!/src/test//build/
 
 VS Code
 .vscode/
